<resources>
    <string name="app_name">Formulario</string>
    <string name="Login">Login</string>
    <string name="Clave">Password</string>
    <string name="RepeatClave">Repita Password</string>
    <string name="Correo">Email</string>
    <string name="sex">Yo soy</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="sugerencia">DD/MM/AAAA</string>
    <string name="ciudadNacimiento">Nací en:</string>
    <string name="text_hobbies">Hobbies</string>
    <string name="guitarra">Guitarra</string>
    <string name="musica">Música</string>
    <string name="idiomas">Idiomas</string>
    <string name="viajes">Viajes</string>
    <string name="button_aceptar">REGISTRAR</string>
    <string-array name="ciudades">
        <item>Medellín</item>
        <item>Leticia</item>
        <item>Arauca</item>
        <item>Barranquilla</item>
        <item>Bogotá</item>
        <item>Cartagena de Indias</item>
        <item>Tunja</item>
        <item>Manizales</item>
        <item>Florencia</item>
        <item>Yopal</item>
        <item>Popayán</item>
        <item>Valledupar</item>
        <item>Quibdó</item>
    </string-array>


</resources>
